<resources>
    <string name="app_name">Free TV</string>
    <string name="title_activity_main">main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_country">Country</string>
    <string name="menu_language">Language</string>
    <string name="menu_epg">EPG</string>
    <string name="menu_share">Setting</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_login">Login</string>
    <string name="menu_all_channel">All Channel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
