<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_subscriptions_black_24dp"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_country"
            android:icon="@drawable/ic_flag_black_24dp"
            android:title="@string/menu_country" />
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_language_black_24dp"
            android:title="@string/menu_language" />
        <item
            android:id="@+id/nav_epg"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="@string/menu_epg" />
    </group>

    <item android:title="Communicate">

        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/menu_logout" />
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/menu_login" />
        </menu>

    </item>

</menu>
