<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.free.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.free.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_country"
        android:name="com.example.free.ui.country.CountryFragment"
        android:label="@string/menu_country"
        tools:layout="@layout/fragment_country" />

    <fragment
        android:id="@+id/nav_language"
        android:name="com.example.free.ui.language.LanguageFragment"
        android:label="@string/menu_language"
        tools:layout="@layout/fragment_language" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.free.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_epg"
        android:name="com.example.free.ui.epg.EpgFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.free.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.free.ui.login.LoginFragment"
        android:label="@string/menu_login"
        />
</navigation>